// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`npm dependencies should load types for npm modules get default type for @wix scoped npm module if fetch throws 1`] = `
Array [
  Object {
    "content": "
    declare module '@wix/react-velo';
    declare module '@wix/react-velo/*';
  ",
    "path": "/dependencies/@wix/react-velo.1.0.0.d.ts",
  },
]
`;

exports[`npm dependencies should load types for npm modules get default type for @wix scoped npm module if request failed 1`] = `
Array [
  Object {
    "content": "
    declare module '@wix/react-velo';
    declare module '@wix/react-velo/*';
  ",
    "path": "/dependencies/@wix/react-velo.1.0.0.d.ts",
  },
]
`;

exports[`npm dependencies should load types for npm modules get default type when request files and the namespaces is not @wix 1`] = `
Array [
  Object {
    "content": "
    declare module 'react';
    declare module 'react/*';
  ",
    "path": "/dependencies/react.16.8.6.d.ts",
  },
  Object {
    "content": "
    declare module 'react-dom';
    declare module 'react-dom/*';
  ",
    "path": "/dependencies/react-dom.16.8.6.d.ts",
  },
]
`;

exports[`npm dependencies should load types for npm modules get default type when request raw 1`] = `
"
    declare module 'react';
    declare module 'react/*';
  "
`;

exports[`npm dependencies should load types for npm modules get proper type for @wix scoped npm module 1`] = `
Array [
  Object {
    "content": "type SababaType = {}",
    "path": "/dependencies/@wix/react-velo.1.0.0.d.ts",
  },
]
`;
